src/objects/Job_Rate_Plan__c.object
<CustomObject>
    <fields>
        <fullName>Charges_without_a_Charge_Date__c</fullName>
        <label>Charges without a Charge Date</label>
        <summaryFilterItems>
            <field>Job_Rate_Plan_Charge__c.Charge_Date__c</field>
            <operation>equals</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>Job_Rate_Plan_Charge__c.Job_Rate_Plan__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Job_Product__c</fullName>
        <label>Order Product</label>
        <referenceTo>Job_Product__c</referenceTo>
        <relationshipLabel>Order Rate Plans</relationshipLabel>
        <relationshipName>Order_Rate_Plans</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Minimum_Next_Charge_Date_For_Product__c</fullName>
        <label>Minimum Next Charge Date For Product</label>
        <summarizedField>Job_Rate_Plan_Charge__c.Next_Charge_Date__c</summarizedField>
        <summaryForeignKey>Job_Rate_Plan_Charge__c.Job_Rate_Plan__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Product_Rate_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Rate Plan</label>
        <referenceTo>Product_Rate_Plan__c</referenceTo>
        <relationshipLabel>Order Rate Plans</relationshipLabel>
        <relationshipName>Order_Rate_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Renewed_From__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Renewed From</label>
        <referenceTo>Job_Rate_Plan__c</referenceTo>
        <relationshipLabel>Order Rate Plans</relationshipLabel>
        <relationshipName>Order_Rate_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sequence_Number__c</fullName>
        <label>Order RatePlan Sequence Number</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Job_Rate_Plans_Charges__c</fullName>
        <label>Total Job Rate Plans Charges</label>
        <summaryForeignKey>Job_Rate_Plan_Charge__c.Job_Rate_Plan__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Price__c</fullName>
        <label>Total Price</label>
        <summarizedField>Job_Rate_Plan_Charge__c.Price__c</summarizedField>
        <summaryForeignKey>Job_Rate_Plan_Charge__c.Job_Rate_Plan__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Vat_Roll_Up__c</fullName>
        <label>Vat Roll Up</label>
        <summarizedField>Job_Rate_Plan_Charge__c.VAT__c</summarizedField>
        <summaryForeignKey>Job_Rate_Plan_Charge__c.Job_Rate_Plan__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Year_1_Net_Total__c</fullName>
        <label>Year 1 Net Total</label>
        <summarizedField>Job_Rate_Plan_Charge__c.Year_1_Net_Total__c</summarizedField>
        <summaryForeignKey>Job_Rate_Plan_Charge__c.Job_Rate_Plan__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Year_2_Net_Total__c</fullName>
        <label>Year 2 Net Total</label>
        <summarizedField>Job_Rate_Plan_Charge__c.Year_2_Net_Total__c</summarizedField>
        <summaryForeignKey>Job_Rate_Plan_Charge__c.Job_Rate_Plan__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Year_3_Net_Total__c</fullName>
        <label>Year 3 Net Total</label>
        <summarizedField>Job_Rate_Plan_Charge__c.Year_3_Net_Total__c</summarizedField>
        <summaryForeignKey>Job_Rate_Plan_Charge__c.Job_Rate_Plan__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Order Rate Plan</label>
    <nameField>
        <label>Order Rate Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Order Rate Plans</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>